@@ -81,6 +81,18 @@
    <criteria>ListFormCriterion</criteria>
    <criteria>CommaFormCriterion</criteria>
   </index>
+  <index name="is_default_page"
+     description="Find items that are the default view for their containing folder."
+     enabled="False" friendlyName="Default Page"
+     i18n:attributes="description; friendlyName">
+   <criteria>BooleanFormCriterion</criteria>
+  </index>
+  <index name="is_folderish"
+     description="Find items that can contain other objects" enabled="False"
+     friendlyName="Folder-like"
+     i18n:attributes="description; friendlyName">
+   <criteria>BooleanFormCriterion</criteria>
+  </index>
   <index name="modified"
      description="The time and date an item was last modified" enabled="True"
      friendlyName="Modification Date"
